<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".CategoriasG">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="404dp"
        android:layout_height="219dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/Pregunta"
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:background="@color/botones"
        android:gravity="center"
        android:text="@string/cargando"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Logo"
        app:layout_constraintVertical_bias="0.382"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/respuesta1"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:backgroundTint="@color/respuestas"
        android:text="@string/r1"
        android:onClick="siguientePregunta"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Logo"
        app:layout_constraintVertical_bias="0.601"
        tools:layout_editor_absoluteX="3dp" />

    <Button
        android:id="@+id/respuesta2"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:backgroundTint="@color/respuestas"
        android:text="@string/r2"
        android:onClick="siguientePregunta"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Logo"
        app:layout_constraintVertical_bias="0.726"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/respuesta3"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:backgroundTint="@color/respuestas"
        android:text="@string/r3"
        android:onClick="siguientePregunta"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Logo"
        app:layout_constraintVertical_bias="0.85"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/respuesta4"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:backgroundTint="@color/respuestas"
        android:text="@string/r4"
        android:onClick="siguientePregunta"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Logo"
        app:layout_constraintVertical_bias="0.975"
        tools:layout_editor_absoluteX="-4dp" />



</androidx.constraintlayout.widget.ConstraintLayout>